# FastArrayEqualityCheck

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  makefile
.github/workflows/: ci.yml
benchmarks/: benchmark_main.cpp  collision_study.cpp  experimental_algorithms.h
cmake/: RunPackageSmokeTest.cmake  faeConfig.cmake.in
docs/: Doxyfile.in  ai-agent-guide.md  api.md  architecture.md  benchmark-baseline.md  empirical-evaluation.md  fingerprint-format.md  probabilistic-model.md
docs/results/: 2026-03-27-deep-baseline.md  2026-03-27-public-cantor-mix-api-deep.md  2026-03-27-public-tuple-mix-api-deep.md  2026-03-27-tuple-mix-deep-compare.md  index.md
examples/: basic_fingerprint.cpp  compare_fingerprints.cpp
fast_array_hash/: compile_and_run.sh  hash_array.cu  pairings.cpp
include/access_patterns/: butterfly.h
include/fae/: fae.h  fingerprint.h
include/fae/pairing/: szudzik.h
include/fae/reduction/: pairwise_fold.h
include/pairing_functions/: szudzik.h
playground/: hash_array.cu  pairings.cpp  szudzik_test.cpp  test
scripts/: create_results_snapshot.sh  promote_results_snapshot.sh
scripts/templates/: results_snapshot.md.in
src/: fingerprint.cpp  szudzik.cpp
src/access_patterns/: butterfly.cpp
src/pairing/: szudzik.cpp
src/pairing_functions/: szudzik.cpp
src/reduction/: pairwise_fold.cpp
tests/: fingerprint_tests.cpp  pairing_tests.cpp  reduction_tests.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tests/pairing_functions/: szudzik_test.cpp  szudzik_tests.cpp
